@@ -1,4 +1,4 @@
-/*[INCLUDE-IF JAVA_SPEC_VERSION >= 19]*/
+/*[INCLUDE-IF JAVA_SPEC_VERSION >= 20]*/
 /*******************************************************************************
  * Copyright IBM Corp. and others 2021
  *
@@ -18,23 +18,24 @@
  * [1] https://www.gnu.org/software/classpath/license.html
  * [2] https://openjdk.org/legal/assembly-exception.html
  *
- * SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-exception-2.0 OR LicenseRef-GPL-2.0 WITH Assembly-exception
+ * SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0-only WITH Classpath-exception-2.0 OR GPL-2.0-only WITH OpenJDK-assembly-exception-1.0
  *******************************************************************************/
 package jdk.internal.foreign.abi;
 
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodType;
 
+/*[IF JAVA_SPEC_VERSION >= 21]*/
+import java.lang.foreign.Arena;
+/*[ENDIF] JAVA_SPEC_VERSION >= 21 */
 import java.lang.foreign.FunctionDescriptor;
 import java.lang.foreign.MemorySegment;
-/*[IF JAVA_SPEC_VERSION >= 20]*/
-import java.lang.foreign.SegmentScope;
-/*[ELSE] JAVA_SPEC_VERSION >= 20 */
-import java.lang.foreign.MemorySession;
-/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
 /*[IF JAVA_SPEC_VERSION >= 21]*/
 import jdk.internal.foreign.abi.AbstractLinker.UpcallStubFactory;
+/*[ELSE] JAVA_SPEC_VERSION >= 21 */
+import java.lang.foreign.SegmentScope;
 /*[ENDIF] JAVA_SPEC_VERSION >= 21 */
+import jdk.internal.foreign.abi.LinkerOptions;
 import openj9.internal.foreign.abi.InternalUpcallHandler;
 
 /**
@@ -48,16 +49,21 @@ public final class UpcallLinker {
 	/* The constructor creates an upcall handler specific to the requested java method
 	 * by generating a native thunk in upcall on a given platform.
 	 */
-	/*[IF JAVA_SPEC_VERSION >= 20]*/
-	UpcallLinker(MethodHandle target, MethodType methodType, FunctionDescriptor descriptor, SegmentScope session)
-	/*[ELSE] JAVA_SPEC_VERSION >= 20 */
-	UpcallLinker(MethodHandle target, MethodType methodType, FunctionDescriptor descriptor, MemorySession session)
-	/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
+	/*[IF JAVA_SPEC_VERSION >= 21]*/
+	UpcallLinker(MethodHandle target, MethodType methodType, FunctionDescriptor descriptor, Arena arena, LinkerOptions options)
 	{
-		InternalUpcallHandler internalUpcallHandler = new InternalUpcallHandler(target, methodType, descriptor, session);
+		InternalUpcallHandler internalUpcallHandler = new InternalUpcallHandler(target, methodType, descriptor, arena, options);
 		/* The thunk address must be set given entryPoint() is used in OpenJDK. */
 		thunkAddr = internalUpcallHandler.upcallThunkAddr();
 	}
+	/*[ELSE] JAVA_SPEC_VERSION >= 21 */
+	UpcallLinker(MethodHandle target, MethodType methodType, FunctionDescriptor descriptor, SegmentScope scope)
+	{
+		InternalUpcallHandler internalUpcallHandler = new InternalUpcallHandler(target, methodType, descriptor, scope);
+		/* The thunk address must be set given entryPoint() is used in OpenJDK. */
+		thunkAddr = internalUpcallHandler.upcallThunkAddr();
+	}
+	/*[ENDIF] JAVA_SPEC_VERSION >= 21 */
 
 	/**
 	 * Returns the address of the generated thunk at runtime.
@@ -68,37 +74,42 @@ public final class UpcallLinker {
 		return thunkAddr;
 	}
 
-	/*[IF JAVA_SPEC_VERSION >= 20]*/
+	/*[IF JAVA_SPEC_VERSION >= 21]*/
 	/**
-	 * The method invoked via Clinker generates a native thunk to create
+	 * The method invoked via Linker generates a native thunk to create
 	 * a native symbol that holds an entry point to the native function
 	 * intended for the requested java method in upcall.
 	 *
 	 * @param target the upcall method handle to the requested java method
 	 * @param methodType the MethodType of the upcall method handle
 	 * @param descriptor the FunctionDescriptor of the upcall method handle
-	 * @param session the SegmentScope of the upcall method handle
+	 * @param arena the Arena of the upcall method handle
+	 * @param options the LinkerOptions indicating additional linking requirements to the linker
 	 * @return the native symbol
 	 */
-	public static MemorySegment make(MethodHandle target, MethodType methodType, FunctionDescriptor descriptor, SegmentScope session)
-	/*[ELSE] JAVA_SPEC_VERSION >= 20 */
-	/**
-	 * The method invoked via Clinker generates a native thunk to create
-	 * a native symbol that holds an entry point to the native function
-	 * intended for the requested java method in upcall.
-	 *
-	 * @param target the upcall method handle to the requested java method
-	 * @param methodType the MethodType of the upcall method handle
-	 * @param descriptor the FunctionDescriptor of the upcall method handle
-	 * @param session the MemorySession of the upcall method handle
-	 * @return the native symbol
-	 */
-	public static MemorySegment make(MethodHandle target, MethodType methodType, FunctionDescriptor descriptor, MemorySession session)
-	/*[ENDIF] JAVA_SPEC_VERSION >= 20 */
+	public static MemorySegment make(MethodHandle target, MethodType methodType, FunctionDescriptor descriptor, Arena arena, LinkerOptions options)
 	{
-		UpcallLinker upcallLinker = new UpcallLinker(target, methodType, descriptor, session);
-		return UpcallStubs.makeUpcall(upcallLinker.entryPoint(), session);
+		UpcallLinker upcallLinker = new UpcallLinker(target, methodType, descriptor, arena, options);
+		return UpcallStubs.makeUpcall(upcallLinker.entryPoint(), arena);
 	}
+	/*[ELSE] JAVA_SPEC_VERSION >= 21 */
+	/**
+	 * The method invoked via Linker generates a native thunk to create
+	 * a native symbol that holds an entry point to the native function
+	 * intended for the requested java method in upcall.
+	 *
+	 * @param target the upcall method handle to the requested java method
+	 * @param methodType the MethodType of the upcall method handle
+	 * @param descriptor the FunctionDescriptor of the upcall method handle
+	 * @param scope the segment scope of the upcall method handle
+	 * @return the native symbol
+	 */
+	public static MemorySegment make(MethodHandle target, MethodType methodType, FunctionDescriptor descriptor, SegmentScope scope)
+	{
+		UpcallLinker upcallLinker = new UpcallLinker(target, methodType, descriptor, scope);
+		return UpcallStubs.makeUpcall(upcallLinker.entryPoint(), scope);
+	}
+	/*[ENDIF] JAVA_SPEC_VERSION >= 21 */
 
 	/*[IF JAVA_SPEC_VERSION >= 21]*/
 	/**
@@ -129,11 +140,12 @@ public final class UpcallLinker {
 	 *
 	 * @param methodType the MethodType of the upcall method handle
 	 * @param descriptor the FunctionDescriptor of the upcall method handle
+	 * @param options the LinkerOptions indicating additional linking requirements to the linker
 	 * @return a factory instance that wraps up the upcall specific code
 	 */
-	public static UpcallStubFactory makeFactory(MethodType methodType, FunctionDescriptor descriptor) {
-		return (target, session) -> {
-			return UpcallLinker.make(target, methodType, descriptor, session);
+	public static UpcallStubFactory makeFactory(MethodType methodType, FunctionDescriptor descriptor, LinkerOptions options) {
+		return (target, arena) -> {
+			return UpcallLinker.make(target, methodType, descriptor, arena, options);
 		};
 	}
 	/*[ENDIF] JAVA_SPEC_VERSION >= 21 */
